# hapy-checkout-system-api

./: .gitignore  README.md  alembic.ini  prestart.py  pyproject.toml
alembic/: env.py
alembic/versions/: c1679800959a_inital_migration.py
app/: backend_pre_start.py  channel_data.py  initial_data.py  main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  channel.py  user.py
app/core/: auth.py  config.py
app/crud/: __init__.py  base.py  crud_channel.py  crud_user.py
app/db/: base.py  init_db.py  session.py
app/models/: address.py  category.py  channel.py  customer.py  delivery_address.py  discount.py  entrance_fee.py  fee.py  grant.py  item.py  loyalty_programs.py  payment.py  pricing_rule.py  restaurant.py  student.py  tag.py  tax.py  user.py
app/schemas/: __init__.py  channel.py  user.py
app/templates/: index.html
docs/: dummy-response.json
