[tool.poetry]
name = "app"
version = "0.1.0"
description = "Hâpy API"
authors = ["Délita MAKANDA"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "~0.21.1"
fastapi = "~0.94.1"
python-multipart = "~0.0.6"
pydantic = {extras = ["email"], version = "~1.10.6"}
jinja2 = "^3.1.2"
greenlet = "^2.0.2"
tenacity = "^8.2.2"
alembic = "^1.10.2"
sqlalchemy = "^2.0.6"
